--- a/experiments/chap3-rnn.ipynb
+++ b/experiments/chap3-rnn.ipynb
@@ -354,14 +354,19 @@
     "    tokens = tokenizer.encode(prompt)\n",
     "    for _ in range(max_length):\n",
     "        with torch.no_grad():\n",
-    "            input_tensor = torch.tensor([tokens[-1]]).unsqueeze(0).to(device)  # (1, 1)\n",
+    "            # input_tensor: 1 x 1\n",
+    "            # 1904 -> [[1904]]\n",
+    "            input_tensor = torch.tensor([tokens]).unsqueeze(0).to(device)  # (1, 1)\n",
+    "            # output: 1 x 32,011\n",
+    "            # model -> [....]\n",
     "            output = model(input_tensor)\n",
+    "            #\n",
     "            probs = torch.softmax(output[0, -1] / temperature, dim=-1)\n",
     "            next_token = torch.multinomial(probs, 1).item()\n",
     "        tokens.append(next_token)\n",
     "        if next_token == tokenizer.eos_token_id:\n",
     "            break\n",
-    "    return tokenizer.decode(tokens)\n",
+    "    return tokenizer.decode(tokens) # 1000 + 1000\n",
     "\n",
     "print(generate_text(model, tokenizer, \"ping\"))\n",
     "# sample(\"ping\")"
@@ -456,7 +461,7 @@
    },
    "cell_type": "code",
    "source": [
-    "enc = tokenizer.encode(\"We train a recurrent neural network as a language model\", max_length=30, truncation=True)\n",
+    "enc = tokenizer.encode(\"We train a recurrent neural network as a language model ??? \", max_length=30, truncation=True)\n",
     "print(enc)"
    ],
    "id": "8472a63d692c2618",
