--- a/emotion_GPT2_as_text_generator.ipynb
+++ b/emotion_GPT2_as_text_generator.ipynb
@@ -605,6 +605,125 @@
     }
    ],
    "execution_count": 1
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-15T01:16:19.373593Z",
+     "start_time": "2025-06-15T01:16:15.450282Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import json             # For parsing JSON data\n",
+    "import random          # For setting seeds and shuffling data\n",
+    "import gzip            # For decompressing dataset\n",
+    "import requests        # For downloading dataset from URL\n",
+    "import torch           # Main PyTorch library\n",
+    "from torch.utils.data import Dataset, DataLoader  # For dataset handling\n",
+    "from transformers import AutoTokenizer, AutoModelForCausalLM  # Hugging Face model components\n",
+    "from torch.optim import AdamW    # Optimizer for training\n",
+    "from tqdm import tqdm   # Progress bar utilities\n",
+    "import re              # For text normalization\n",
+    "\n",
+    "\n",
+    "model_name = \"openai-community/gpt2\"\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "print(f\"Using device: {device}\")\n",
+    "\n",
+    "# Initialize tokenizer and configure padding token\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
+    "model = AutoModelForCausalLM.from_pretrained(model_name).to(device)"
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using device: cpu\n"
+     ]
+    }
+   ],
+   "execution_count": 1
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-15T01:16:25.124653Z",
+     "start_time": "2025-06-15T01:16:25.120677Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "tokenizer",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GPT2TokenizerFast(name_or_path='openai-community/gpt2', vocab_size=50257, model_max_length=1024, is_fast=True, padding_side='right', truncation_side='right', special_tokens={'bos_token': '<|endoftext|>', 'eos_token': '<|endoftext|>', 'unk_token': '<|endoftext|>'}, clean_up_tokenization_spaces=False, added_tokens_decoder={\n",
+       "\t50256: AddedToken(\"<|endoftext|>\", rstrip=False, lstrip=False, single_word=False, normalized=True, special=True),\n",
+       "}\n",
+       ")"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 2
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-06-15T01:17:01.146807Z",
+     "start_time": "2025-06-15T01:17:01.144380Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(model)",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GPT2LMHeadModel(\n",
+      "  (transformer): GPT2Model(\n",
+      "    (wte): Embedding(50257, 768)\n",
+      "    (wpe): Embedding(1024, 768)\n",
+      "    (drop): Dropout(p=0.1, inplace=False)\n",
+      "    (h): ModuleList(\n",
+      "      (0-11): 12 x GPT2Block(\n",
+      "        (ln_1): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
+      "        (attn): GPT2Attention(\n",
+      "          (c_attn): Conv1D(nf=2304, nx=768)\n",
+      "          (c_proj): Conv1D(nf=768, nx=768)\n",
+      "          (attn_dropout): Dropout(p=0.1, inplace=False)\n",
+      "          (resid_dropout): Dropout(p=0.1, inplace=False)\n",
+      "        )\n",
+      "        (ln_2): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
+      "        (mlp): GPT2MLP(\n",
+      "          (c_fc): Conv1D(nf=3072, nx=768)\n",
+      "          (c_proj): Conv1D(nf=768, nx=3072)\n",
+      "          (act): NewGELUActivation()\n",
+      "          (dropout): Dropout(p=0.1, inplace=False)\n",
+      "        )\n",
+      "      )\n",
+      "    )\n",
+      "    (ln_f): LayerNorm((768,), eps=1e-05, elementwise_affine=True)\n",
+      "  )\n",
+      "  (lm_head): Linear(in_features=768, out_features=50257, bias=False)\n",
+      ")\n"
+     ]
+    }
+   ],
+   "execution_count": 4
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": ""
   }
  ],
  "metadata": {
